# daml

./: deps.bzl
bazel_tools/: BUILD.bazel  haskell-expand-location.patch  haskell.bzl  make_variables.bzl
compiler/scenario-service/client/: BUILD.bazel
compiler/scenario-service/client/src/DA/Daml/LF/ScenarioServiceClient/: LowLevel.hs
libs-haskell/bazel-runfiles/: BUILD.bazel
