# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(":make_variables.bzl", "make_variables")

# Export Bazel sources for Bazel API docs.
exports_files(
    [
        "haskell.bzl",
        "scala.bzl",
        "haskell-c2hs.patch",
        "haskell-static-linking.patch",
        "haskell-optp-response.patch",
        "haskell-arx.patch",
        "haskell-win-sys-includes.patch",
        "haskell-drop-fake-static.patch",
        "ghci-template.sh",
        "pom_template.xml",
    ],
    visibility = ["//:__subpackages__"],
)

make_variables(
    name = "make_variables",
    visibility = ["//visibility:public"],
)
